external-dns/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    certmanager.k8s.io/disable-validation: "true"
