external-dns/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  labels:
    app.kubernetes.io/name: external-dns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "7979"
      labels:
        app.kubernetes.io/name: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: quay.io/cybozu/external-dns:0.7.1.1
        ports:
        - containerPort: 7979
        args:
        - --help
        volumeMounts:
        - name: external-dns-secret-volume
          mountPath: /etc/external-dns.secret/
      volumes:
      - name: external-dns-secret-volume
        secret:
          secretName: clouddns
